--- a/style.css
+++ b/style.css
@@ -30,26 +30,18 @@ h1 {
     gap: 2px;
 }
 
-.top-row {
-    justify-content: space-between;
-}
-
-.last-row {
-    justify-content: end;
-}
-
-/* .top-row > button, .last-row > button {
-    flex-grow: 0;
-} */
-
 .btn-row > button {
     font-size: 24px;
-    width: 100px;
-    height: 100px;
+    width: 25%;
+    height: 25%;
     padding: 10px 10px;
 }
 
 #clear {
     margin-left: 0;
     margin-right: auto;
+}
+
+#eq, #clear {
+    width: 200px;
 }
